wacc/test/golden/syntaxErr.while.whileNodo
# while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false
    skip
  done
end


(line 13, column 5):
  unexpected "sk"
  expected !=, %, &&, *, +, -, /, <, <=, ==, >, >=, do, end of false, or ||
  >  while false
  >    skip
       ^^
  >  done